[package]
name = "crosspoint-api"
version = "0.1.0"
authors = ["Noelle Stern"]
license = "MIT"
description = "CrossPoint web API"
repository = "https://github.com/NoelleStern/crosspoint-api"
documentation = "https://docs.rs/crosspoint-api"
readme = "README.md"
keywords = ["api", "wasm", "crosspoint", "esp32", "e-reader"]
categories = ["api-bindings", "wasm"]
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

# Common dependencies
[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
url = "2.5.8"

# Dev dependencies
[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }

# Native dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.13.4", features = [
    "json",
    "form",
    "query",
    "multipart",
] }

# Web dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "0.7.0"
js-sys = "0.3.103"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.126"
wasm-bindgen-futures = "0.4.76"
web-sys = { version = "0.3.103", features = [
    "Blob",
    "File",
    "FormData",
    "Headers",
    "Request",
    "Response",
] }
